Integrate OTC medication scanner + Tavus visit flow
- Restore Tavus-based /api/visit/start and Daily join URL/token flow
- Add top-level /meds page with live camera OCR, fuzzy matching, and plan generation
- Store med scan notes in visit utterances and provide sharable Tavus prompt

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,37 @@
-# CareZoom – copy to .env (backend) or .env.local (frontend) as needed
+# CareZoom – copy values into:
+# - backend/.env
+# - frontend/.env.local
+#
+# IMPORTANT: Do not commit real API keys.
 
 # ============ Backend (backend/.env) ============
 PORT=4000
 NODE_ENV=development
 
-# Tavus – AI avatar (optional; uses mock if missing)
+# Tavus (CVI "Zoom meeting" mode)
 TAVUS_API_KEY=
 TAVUS_REALTIME_API_KEY=
+TAVUS_PERSONA_ID=
+TAVUS_REPLICA_ID=
 
-# LLM (triage + summary + vision; uses mock if missing)
+# Force demo (always use /mock-meeting)
+FORCE_MOCK_MEETING=0
+
+# LLM (optional; summary + vision)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
 
-# Maps (optional; mock if missing)
-MAPBOX_ACCESS_TOKEN=   # or GOOGLE_MAPS_API_KEY for geocode/POI
-OSRM_BASE_URL=http://router.project-osrm.org/route/v1  # public demo server
+# Maps / routing
+MAPBOX_ACCESS_TOKEN=
+OSRM_BASE_URL=http://router.project-osrm.org/route/v1
 
 # Local persistence (MVP)
 VISIT_DB_PATH=./logs/visits.json
-
-# Tavus persona/replica defaults (for /api/visit/start)
-TAVUS_PERSONA_ID=p91a5db55796
-TAVUS_REPLICA_ID=r4317e64d25a
-
-# Audit / storage (optional)
 AUDIT_LOG_PATH=./logs/audit.json
 DATA_RETENTION_DAYS=30
 
 # ============ Frontend (frontend/.env.local) ============
 NEXT_PUBLIC_API_URL=http://localhost:4000
-NEXT_PUBLIC_TAVUS_APP_ID=   # if using Tavus client-side
-NEXT_PUBLIC_APP_URL=        # set to ngrok/deployed URL for caregiver links
+NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_TAVUS_APP_ID=
+
