--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,16 @@
 PORT=4000
 NODE_ENV=development
+
+# Tavus (CVI "Zoom meeting" mode)
 TAVUS_API_KEY=
 TAVUS_REALTIME_API_KEY=
 TAVUS_PERSONA_ID=
 TAVUS_REPLICA_ID=
+
+# Force demo (always use /mock-meeting)
+FORCE_MOCK_MEETING=0
+
+# LLM (optional; summary + vision)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
 OSRM_BASE_URL=http://router.project-osrm.org/route/v1
